# toopher-pam

./: .gitignore  BUILD.md  ChangeLog.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README.md  README.txt  aclocal.m4  autogen.sh  bin2c.c  build-requirements.txt  common.py  config.h.in  config.py.in  configure  configure.ac  docker-builds.sh  epl-v10.html  pam_python.c  pam_python.html  pam_toopher.py  release.sh  setup.py  tests.py  toopher-api-helper.py  toopher-pair.py
bundle_importer/: create_bundle_importer.py  data_bundler.py  patches.py
config-files/: config  credentials  password+toopher-auth
config-files/pam/: ubuntu
doc/: Makefile  conf.py  pam_permit.py  pam_python.rst
doc/html/: genindex.html  index.html  objects.inv  pam_python.html  search.html  searchindex.js
packaging/: Makefile
packaging/deb/: changelog  control  copyright  files  install  postinst  postrm  rules
packaging/deb/pam-configs/: toopher
packaging/rpm/: pam_toopher.spec
packaging/rpm/SOURCES/: pam_toopher-add-pamconf
src/: Makefile  test.py
